# it's an extension fo setup.py
# setup.cfg is used by setuptools module in setup.py to configure the packaging and installation of python project
# it's being used to create a  metadata for the built package.

[metadata]
license = MIT
license_file = license
classifiers = 
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System : OS Independent

[options]
install_requires = 
    ensure==1.0.2
    py-youtube==1.1.7
python_requires = >=3.7

[options.extras_require]
testing = 
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1